--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,14 @@
-<hello name="{{ name }}"></hello>
-<p>
-  Start editing to see some magic happen :)
-</p>
+<table style="width:100%">
+  <tr style="text-align: left">
+    <th>Name</th>
+    <th>Food Group</th>
+  </tr>
+  <tr>
+    <td>cheese burger</td>
+    <td>meat</td>
+  </tr>
+  <tr>
+    <td>dragon fruit</td>
+    <td>fruit</td>
+  </tr>
+</table>
